# nacu

./: .gitignore  README.md  assignment1.tex  flake.nix  pyproject.toml
1/: 1.aux  1.tex  1_4.ipynb  8.py  assignment_1.tex  main.tex
1/8/: main.py  plots.py
2/: main.tex
assignment_1/: 1_4.ipynb  main.tex
assignment_1/6/: TSPSolver.py
assignment_2/: 1_2.tex  Assignment2_1.ipynb  Assignment2_2.ipynb  main.tex
assignment_2/3/: main.py
assignment_3/code/: Obstacles.html
assignment_4/code/: 1.py  compute_scores.sh
assignment_4/code/lang/: 1.py  compute_scores.sh
assignment_4/code/syscalls/: 2.py  scores_cert.csv  scores_unm.csv
assignment_4/code/syscalls/snd-cert/: test.csv  train.csv
assignment_4/code/syscalls/snd-unm/: test.csv  train.csv
assignment_5/code/: 1.csv  1.py  1_filled.csv  2.py  3ab.py  3d.py  Exercise_5.ipynb
project/: fa.py
