[tool.poetry]
name = "nacu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
deap = "^1.3.1"
pandas = "^1.4.0"
numpy = "^1.22.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
